package ice.ice;

public abstract class Emission{
    private double co2Gram;

    public Emission(double co2Gram) {
        this.co2Gram = co2Gram;
    }
}
