package ice.ice;

public abstract class Offset extends Co2{
    protected double co2Kilo;


    public Offset() {


    }








}
